# practice-of-algorithms

./: CMakeLists.txt
2A1/: futurama.cpp  hard_dif.cpp  parallel.cpp  tictactoe.cpp  triangles.cpp
2B2/: benches.cpp  diplomas.cpp  num_of_max.cpp  palindrome.cpp  shops.cpp
Stepik/: log2.cpp  macros.cpp
